--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -22,3 +22,7 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$muted     : #999;
+
+$h1:        (size: 2rem,     line-height: 2rem,     letter-spacing: -.01562em, weight: 300, margin: 0, padding: 0) !default
